Per PanWor's request fixed the logo overlapping with website content

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,16 +3,14 @@ background-image:linear-gradient(var(--background-color), var(--background-alter
 font-family: Cyberpunk;
 display:flex;
 flex-direction:column;
-justify-content:center;
-align-items:center;
 min-height:100vh;
+padding:1rem;
+gap:1rem;
 }
-.logo{
-scale:1;transition:scale 300ms;top:1rem;left:1rem;position:absolute;display:flex;flex-direction:column;gap:1rem
-}
+.logo{display:flex;flex-direction:column;gap:1rem}
 
 p{
 	color:var(--text-alternate-color);
 }
-.layout{display:flex;flex-direction:row;gap:1rem;align-items:center;justify-content:center;flex-wrap:wrap}
+.layout{display:flex;flex-direction:row;gap:1rem;align-items:center;justify-content:center;flex-wrap:wrap;flex:1;}
 
