--- a/static/css/style.css
+++ b/static/css/style.css
@@ -74,8 +74,12 @@ border-radius:inherit;
 width: 100%;border:1px solid var(--text-alternate-color);margin:0.5rem 0rem;
 }
 .button:hover{
-filter:brightness(1.4);}
-
-img{
+filter:brightness(1.4);
+}
+.container-border.tarot>.container>img{
     pointer-events: none;
+    width:100%;
+    object-fit:scale-down;
+    max-width:20rem;
+    min-width:10rem;
 }
